--- a/Project11.dproj
+++ b/Project11.dproj
@@ -277,6 +277,10 @@
             <Form>Form14</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="Unit1.pas">
+            <Form>Form1</Form>
+            <FormType>fmx</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
